--- a/po/fr.po
+++ b/po/fr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-10 17:29-0400\n"
-"PO-Revision-Date: 2025-06-10 17:32-0400\n"
+"POT-Creation-Date: 2025-06-10 23:13-0400\n"
+"PO-Revision-Date: 2025-06-10 23:25-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -73,8 +73,12 @@ msgctxt "top button tooltip"
 msgid "Refresh Unit List"
 msgstr "Rafraîchir la liste des unités"
 
-#: data/interfaces/clean_dialog.ui:28
-msgctxt "button"
+#. button
+#. title dialog
+#. Message answer
+#: data/interfaces/clean_dialog.ui:28 data/interfaces/clean_dialog.ui:40
+#: src/widget/clean_dialog/imp.rs:99
+msgctxt "clean"
 msgid "Clean"
 msgstr "Nettoyer"
 
@@ -163,7 +167,7 @@ msgstr "Démarrer maintenant"
 #: data/interfaces/enable_unit_dialog.ui:93
 msgctxt "enable unit file"
 msgid "Starting mode options"
-msgstr "Options du de démarage"
+msgstr "Options de démarrage"
 
 #. title
 #: data/interfaces/enable_unit_dialog.ui:94
@@ -184,7 +188,9 @@ msgid "Enable"
 msgstr "Activer"
 
 #. dialog title
+#. Message answer
 #: data/interfaces/enable_unit_dialog.ui:128
+#: src/widget/enable_unit_dialog/imp.rs:165
 msgctxt "enable unit file"
 msgid "Enable Unit File"
 msgstr "Activer un fichier d'unité"
@@ -264,6 +270,60 @@ msgstr ""
 msgctxt "journal"
 msgid "No journal events"
 msgstr "Aucun événement de journal"
+
+#. group
+#: data/interfaces/kill_panel.ui:20
+msgctxt "kill"
+msgid "Parameters"
+msgstr "Paramètres"
+
+#. title
+#: data/interfaces/kill_panel.ui:23
+msgctxt "kill"
+msgid "Unix signal"
+msgstr "Signal Unix"
+
+#. subtitle
+#: data/interfaces/kill_panel.ui:29
+msgctxt "kill"
+msgid "Unit related processes"
+msgstr "Processus liés à l'unité"
+
+#. title
+#: data/interfaces/kill_panel.ui:30
+msgctxt "kill"
+msgid "Who to kill"
+msgstr "Processus visés"
+
+#. title
+#: data/interfaces/kill_panel.ui:37
+msgctxt "kill"
+msgid "Signal Value"
+msgstr "Valeur du signal"
+
+#. button
+#: data/interfaces/kill_panel.ui:51
+msgctxt "kill"
+msgid "Send"
+msgstr "Envoyer"
+
+#. description
+#: data/interfaces/kill_panel.ui:60
+msgctxt "kill"
+msgid "Most common Linux signals"
+msgstr "Signaux Linux les plus courants"
+
+#. description
+#: data/interfaces/kill_panel.ui:62
+msgctxt "kill"
+msgid "Common Unix signals"
+msgstr "Signaux Unix courants"
+
+#. button
+#: data/interfaces/kill_panel.ui:84
+msgctxt "kill"
+msgid "Send Kill Signal to Unit"
+msgstr "Envoyer un signal Kill à l'unité"
 
 #: data/interfaces/list_boots.ui:37
 msgctxt "boot list column"
@@ -701,11 +761,45 @@ msgctxt "control"
 msgid "Ask the specified unit to reload its configuration"
 msgstr "Demander à l'unité spécifiée de recharger sa configuration"
 
+#. description
 #: data/interfaces/signals_window.ui:24
+msgctxt "signals"
 msgid ""
 "No systemd signals\n"
 "Start or Stop a Unit to see some appearing"
 msgstr ""
+"Aucun signal Systemd\n"
+"Démarrez ou arrêtez une unité pour en voir apparaître"
+
+#. title
+#: data/interfaces/signals_window.ui:27
+msgctxt "signals"
+msgid "No signals"
+msgstr "Pas de signaux"
+
+#. column title
+#: data/interfaces/signals_window.ui:55
+msgctxt "signals"
+msgid "Time"
+msgstr "Temps"
+
+#. column title
+#: data/interfaces/signals_window.ui:62
+msgctxt "signals"
+msgid "Type"
+msgstr "Type"
+
+#. column title
+#: data/interfaces/signals_window.ui:68
+msgctxt "signals"
+msgid "Details"
+msgstr "Détails"
+
+#. dialog title
+#: data/interfaces/signals_window.ui:87
+msgctxt "signals"
+msgid "Watch Signals"
+msgstr "Monitorer les signaux"
 
 #: data/interfaces/unit_control_panel.ui:16
 msgctxt "control info"
@@ -942,20 +1036,423 @@ msgctxt "analyse blame"
 msgid "Running units"
 msgstr "Unités en service"
 
-#: src/analyze/mod.rs:174
-#, rust-format
-msgctxt "analyse blame"
-msgid "{} seconds"
-msgstr "{} seconds"
-
 #. Just a simple log that it's all ok. Need to set env RUST_LOG="info" to see it
 #: src/main.rs:80
 msgid "Program starting up"
 msgstr "Le Programme démarre"
 
+#: src/systemd/enums.rs:188
+msgctxt "list"
+msgid "The name is an alias (symlink to another unit file)."
+msgstr "Le nom est un alias (lien symbolique vers un autre fichier d'unité)."
+
+#: src/systemd/enums.rs:192
+msgctxt "list"
+msgid "The unit file is invalid or another error occurred."
+msgstr ""
+"Le fichier d'unité n'est pas valide ou une autre erreur s'est produite."
+
+#: src/systemd/enums.rs:196
+msgctxt "list"
+msgid ""
+"The unit file is not enabled, but contains an [Install] section with "
+"installation instructions."
+msgstr ""
+"Le fichier d'unité n'est pas activé, mais contient une section [Install] "
+"avec des instructions d'installation."
+
+#: src/systemd/enums.rs:200 src/systemd/enums.rs:229
+msgctxt "list"
+msgid ""
+"Enabled via <span fgcolor='#62a0ea'>.wants/</span>, <span "
+"fgcolor='#62a0ea'>.requires/</span> or <u>Alias=</u> symlinks (permanently "
+"in <span fgcolor='#62a0ea'>/etc/systemd/system/</span>, or transiently in "
+"<span fgcolor='#62a0ea'>/run/systemd/system/</span>)."
+msgstr ""
+"Activé via les liens symboliques <span fgcolor='#62a0ea'>.wants/</span>, "
+"<span fgcolor='#62a0ea'>.requires/</span> ou <u>Alias=</u> (de manière "
+"permanente dans <span fgcolor='#62a0ea'>/etc/systemd/system/</span>, ou de "
+"manière transitoire dans <span fgcolor='#62a0ea'>/run/systemd/system/</"
+"span>)."
+
+#: src/systemd/enums.rs:204
+msgctxt "list"
+msgid ""
+"The unit file was generated dynamically via a generator tool. See <b>man "
+"systemd.generator(7)</b>. Generated unit files may not be enabled, they are "
+"enabled implicitly by their generator."
+msgstr ""
+"Le fichier unité a été généré dynamiquement via un outil générateur. Voir "
+"<b>man systemd.generator(7)</b>. Les fichiers d'unité générés ne peuvent pas "
+"être activés; ils le sont implicitement par leur générateur."
+
+#: src/systemd/enums.rs:208
+msgctxt "list"
+msgid ""
+"The unit file itself is not enabled, but it has a non-empty <u>Also=</u> "
+"setting in the [Install] unit file section, listing other unit files that "
+"might be enabled, or it has an alias under a different name through a "
+"symlink that is not specified in <u>Also=</u>. For template unit files, an "
+"instance different than the one specified in <u>DefaultInstance=</u> is "
+"enabled."
+msgstr ""
+"Le fichier d'unité lui-même n'est pas activé, mais il possède un paramètre "
+"<u>Also=</u> non vide dans la section [Install] du fichier d'unité, "
+"répertoriant d'autres fichiers d'unité susceptibles d'être activés, ou un "
+"alias sous un nom différent via un lien symbolique non spécifié dans "
+"<u>Also=</u>. Pour les fichiers d'unité de modèle, une instance différente "
+"de celle spécifiée dans <u>DefaultInstance=</u> est activée."
+
+#: src/systemd/enums.rs:212 src/systemd/enums.rs:233
+msgctxt "list"
+msgid ""
+"Made available through one or more symlinks to the unit file (permanently in "
+"<span fgcolor='#62a0ea'>/etc/systemd/system/</span> or transiently in <span "
+"fgcolor='#62a0ea'>/run/systemd/system/</span>), even though the unit file "
+"might reside outside of the unit file search path."
+msgstr ""
+"Rendu disponible via un ou plusieurs liens symboliques vers le fichier unité "
+"(de manière permanente dans <span fgcolor='#62a0ea'>/etc/systemd/system/</"
+"span> ou de manière transitoire dans <span fgcolor='#62a0ea'>/run/systemd/"
+"system/</span>), même si le fichier unité peut résider en dehors du chemin "
+"de recherche du fichier unité."
+
+#: src/systemd/enums.rs:216 src/systemd/enums.rs:237
+msgctxt "list"
+msgid ""
+"Completely disabled, so that any start operation on it fails (permanently in "
+"<span fgcolor='#62a0ea'>/etc/systemd/system/</span> or transiently in <span "
+"fgcolor='#62a0ea'>/run/systemd/systemd/</span>)."
+msgstr ""
+"Complètement désactivé, de sorte que toute opération de démarrage échoue (de "
+"manière permanente dans <span fgcolor='#62a0ea'>/etc/systemd/system/</span> "
+"ou de manière transitoire dans <span fgcolor='#62a0ea'>/run/systemd/systemd/"
+"</span>)."
+
+#: src/systemd/enums.rs:220
+msgctxt "list"
+msgid ""
+"The unit file is not enabled, and has no provisions for enabling in the "
+"[Install] unit file section."
+msgstr ""
+"Le fichier d'unité n'est pas activé et ne dispose d'aucune disposition pour "
+"l'activation dans la section du fichier d'unité [Install]."
+
+#: src/systemd/enums.rs:224
+msgctxt "list"
+msgid ""
+"The unit file has been created dynamically with the runtime API. Transient "
+"units may not be enabled."
+msgstr ""
+"Le fichier d'unité a été créé dynamiquement avec l'API d'exécution. Les "
+"unités transitoires ne peuvent pas être activées."
+
+#: src/systemd/enums.rs:919
+msgctxt "clean"
+msgid "_Runtime"
+msgstr "_Runtime"
+
+#: src/systemd/enums.rs:920
+msgctxt "clean"
+msgid "_State"
+msgstr "État"
+
+#: src/systemd/enums.rs:921
+msgctxt "clean"
+msgid "Cac_he"
+msgstr "Cac_he"
+
+#: src/systemd/enums.rs:922
+msgctxt "clean"
+msgid "_Logs"
+msgstr "Journau_x"
+
+#: src/systemd/enums.rs:923
+msgctxt "clean"
+msgid "_Configuration"
+msgstr "_Configuration"
+
+#: src/systemd/enums.rs:924
+msgctxt "clean"
+msgid "_File Descriptor Store"
+msgstr "Magasin de descripteurs de _fichiers"
+
+#: src/systemd/enums.rs:925
+msgctxt "clean"
+msgid "_All"
+msgstr "_Tous"
+
 #: src/widget/app_window/menu.rs:193
 msgid "Thank you for your support"
 msgstr "Merci pour votre soutien"
+
+#: src/widget/clean_dialog/imp.rs:129
+msgctxt "clean"
+msgid "No Unit Selected"
+msgstr "Pas d'unité sélectionné"
+
+#. Dailog subtitle
+#: src/widget/kill_panel/imp.rs:77
+msgctxt "kill"
+msgid "No Unit Selected"
+msgstr "Pas d'unité sélectionné"
+
+#: src/widget/kill_panel/imp.rs:153
+#, rust-format
+msgctxt "kill"
+msgid ""
+"{}\n"
+"Default Action: {}"
+msgstr ""
+"{}\n"
+"Action par défaut: {}"
+
+#. Dialog title
+#: src/widget/kill_panel/imp.rs:199
+msgctxt "kill"
+msgid "Queue a Realtime Signal to Unit"
+msgstr "Envoyer un signal de file d'attente à l'unité"
+
+#: src/widget/kill_panel/imp.rs:224 src/widget/kill_panel/imp.rs:415
+#: src/widget/kill_panel/imp.rs:421 src/widget/kill_panel/imp.rs:469
+#: src/widget/kill_panel/imp.rs:475 src/widget/kill_panel/imp.rs:487
+#: src/widget/kill_panel/imp.rs:493 src/widget/kill_panel/imp.rs:499
+#: src/widget/kill_panel/imp.rs:505 src/widget/kill_panel/imp.rs:511
+#: src/widget/kill_panel/imp.rs:574 src/widget/kill_panel/imp.rs:580
+#: src/widget/kill_panel/imp.rs:592 src/widget/kill_panel/imp.rs:598
+#: src/widget/kill_panel/imp.rs:604
+msgctxt "kill default action"
+msgid "Terminate"
+msgstr "Terminer"
+
+#: src/widget/kill_panel/imp.rs:225
+msgctxt "kill signal"
+msgid "Real-time signal"
+msgstr "Signal temps réel"
+
+#. Dialog title
+#: src/widget/kill_panel/imp.rs:231
+msgctxt "kill"
+msgid "Send a Kill Signal to Unit"
+msgstr "Envoyer un signal Kill à l'unité"
+
+#: src/widget/kill_panel/imp.rs:299
+#, rust-format
+msgctxt "kill"
+msgid "Queued signal {} with value {} to"
+msgstr "Signal de file d'attente {} avec valeur {} vers"
+
+#: src/widget/kill_panel/imp.rs:314
+#, rust-format
+msgctxt "kill"
+msgid "Kill signal {} to"
+msgstr "Signal Kill  {} vers"
+
+#: src/widget/kill_panel/imp.rs:416
+msgctxt "kill signal"
+msgid "Hang up controlling terminal or process"
+msgstr ""
+"Rupture détectée sur le terminal contrôleur ou mort du processus parent"
+
+#: src/widget/kill_panel/imp.rs:422
+msgctxt "kill signal"
+msgid "Interrupt from keyboard, Control-C"
+msgstr "Interruption du clavier (Ctrl+C dans un terminal)"
+
+#: src/widget/kill_panel/imp.rs:427 src/widget/kill_panel/imp.rs:433
+#: src/widget/kill_panel/imp.rs:439 src/widget/kill_panel/imp.rs:445
+#: src/widget/kill_panel/imp.rs:451 src/widget/kill_panel/imp.rs:457
+#: src/widget/kill_panel/imp.rs:463 src/widget/kill_panel/imp.rs:481
+#: src/widget/kill_panel/imp.rs:562 src/widget/kill_panel/imp.rs:568
+#: src/widget/kill_panel/imp.rs:610 src/widget/kill_panel/imp.rs:616
+msgctxt "kill default action"
+msgid "Dump"
+msgstr "Décharger"
+
+#: src/widget/kill_panel/imp.rs:428
+msgctxt "kill signal"
+msgid "Quit from keyboard, Control-\""
+msgstr "Arrêt du processus"
+
+#: src/widget/kill_panel/imp.rs:434
+msgctxt "kill signal"
+msgid "Illegal instruction"
+msgstr "Instruction illégale"
+
+#: src/widget/kill_panel/imp.rs:440
+msgctxt "kill signal"
+msgid "Breakpoint for debugging"
+msgstr "Point d'arrêt pour le débogage"
+
+#: src/widget/kill_panel/imp.rs:446
+msgctxt "kill signal"
+msgid "Abnormal termination"
+msgstr "Arrêt anormal du processus"
+
+#: src/widget/kill_panel/imp.rs:452
+msgctxt "kill signal"
+msgid "Equivalent to SIGABRT"
+msgstr "Équivalent à SIGABRT"
+
+#: src/widget/kill_panel/imp.rs:458
+msgctxt "kill signal"
+msgid "Bus error"
+msgstr "Erreur de bus"
+
+#: src/widget/kill_panel/imp.rs:464
+msgctxt "kill signal"
+msgid "Floating-point exception"
+msgstr "Erreur sur un nombre flottant"
+
+#: src/widget/kill_panel/imp.rs:470
+msgctxt "kill signal"
+msgid "Forced-process termination"
+msgstr "Tue immédiatement le processus"
+
+#: src/widget/kill_panel/imp.rs:476 src/widget/kill_panel/imp.rs:488
+msgctxt "kill signal"
+msgid "Available to processes"
+msgstr "Disponible pour les processus"
+
+#: src/widget/kill_panel/imp.rs:482
+msgctxt "kill signal"
+msgid "Invalid memory reference"
+msgstr "Erreur de segmentation"
+
+#: src/widget/kill_panel/imp.rs:494
+msgctxt "kill signal"
+msgid "Write to pipe with no readers"
+msgstr "Erreur de tube (écriture dans un tube sans lecteur)"
+
+#: src/widget/kill_panel/imp.rs:500
+msgctxt "kill signal"
+msgid "Real-timer clock"
+msgstr "Horloge en temps réel"
+
+#: src/widget/kill_panel/imp.rs:506
+msgctxt "kill signal"
+msgid "Process termination"
+msgstr "Termine le processus"
+
+#: src/widget/kill_panel/imp.rs:512
+msgctxt "kill signal"
+msgid "Coprocessor stack error"
+msgstr "Erreur de pile du coprocesseur"
+
+#: src/widget/kill_panel/imp.rs:517 src/widget/kill_panel/imp.rs:556
+#: src/widget/kill_panel/imp.rs:586
+msgctxt "kill default action"
+msgid "Ignore"
+msgstr "Ignorer"
+
+#: src/widget/kill_panel/imp.rs:520
+msgctxt "kill signal"
+msgid "Child process stopped or terminated or got a signal if traced"
+msgstr ""
+"Le processus enfant s'est arrêté ou terminé ou a reçu un signal s'il est "
+"tracé"
+
+#: src/widget/kill_panel/imp.rs:526
+msgctxt "kill default action"
+msgid "Continue"
+msgstr "Continuer"
+
+#: src/widget/kill_panel/imp.rs:527
+msgctxt "kill signal"
+msgid "Resume execution, if stopped"
+msgstr "Reprendre l'exécution, si arrêtée"
+
+#: src/widget/kill_panel/imp.rs:532 src/widget/kill_panel/imp.rs:538
+#: src/widget/kill_panel/imp.rs:544 src/widget/kill_panel/imp.rs:550
+msgctxt "kill default action"
+msgid "Stop"
+msgstr "Arrêtez"
+
+#: src/widget/kill_panel/imp.rs:533
+msgctxt "kill signal"
+msgid "Stop process execution, Ctrl-Z"
+msgstr "Interromps le processus (Ctrl+Z dans un terminal)"
+
+#: src/widget/kill_panel/imp.rs:539
+msgctxt "kill signal"
+msgid "Stop process issued from tty"
+msgstr "Processus d'arrêt émis depuis le tty"
+
+#: src/widget/kill_panel/imp.rs:545
+msgctxt "kill signal"
+msgid "Background process requires input"
+msgstr "Entrée de terminal pour un processus en arrière plan"
+
+#: src/widget/kill_panel/imp.rs:551
+msgctxt "kill signal"
+msgid "Background process requires output"
+msgstr "Sortie de terminal pour un processus en arrière plan"
+
+#: src/widget/kill_panel/imp.rs:557
+msgctxt "kill signal"
+msgid "Urgent condition on socket"
+msgstr "État urgent sur du socket"
+
+#: src/widget/kill_panel/imp.rs:563
+msgctxt "kill signal"
+msgid "CPU time limit exceeded"
+msgstr "Limite de temps CPU dépassée"
+
+#: src/widget/kill_panel/imp.rs:569
+msgctxt "kill signal"
+msgid "File size limit exceeded"
+msgstr "Limite de taille de fichier dépassée"
+
+#: src/widget/kill_panel/imp.rs:575
+msgctxt "kill signal"
+msgid "Virtual timer clock"
+msgstr "Chronomètre virtuel (Virtual Timer) expiré"
+
+#: src/widget/kill_panel/imp.rs:581
+msgctxt "kill signal"
+msgid "Profile timer clock"
+msgstr "Horloge de minuterie de profil"
+
+#: src/widget/kill_panel/imp.rs:587
+msgctxt "kill signal"
+msgid "Window resizing"
+msgstr "Redimensionnement de la fenêtre"
+
+#: src/widget/kill_panel/imp.rs:593
+msgctxt "kill signal"
+msgid "I/O now possible"
+msgstr "I/O désormais possibles"
+
+#: src/widget/kill_panel/imp.rs:599
+msgctxt "kill signal"
+msgid "Equivalent to SIGIO"
+msgstr "Équivalent à SIGIO"
+
+#: src/widget/kill_panel/imp.rs:605
+msgctxt "kill signal"
+msgid "Power supply failure"
+msgstr "Panne d'alimentation"
+
+#: src/widget/kill_panel/imp.rs:611
+msgctxt "kill signal"
+msgid "Bad system call"
+msgstr "Mauvais appel système"
+
+#: src/widget/kill_panel/imp.rs:617
+msgctxt "kill signal"
+msgid "Equivalent to SIGSYS"
+msgstr "Équivalent à SIGSYS"
+
+#. Message answer
+#: src/widget/mask_unit_dialog/imp.rs:122
+msgctxt "mask"
+msgid "Mask Unit File"
+msgstr "Masquer fichier de l'unité"
+
+#: src/widget/mask_unit_dialog/imp.rs:208
+msgctxt "mask"
+msgid "No Unit Selected"
+msgstr "Pas d'unité sélectionnée"
 
 #: src/widget/preferences/data.rs:45
 msgctxt "filter"
@@ -1011,6 +1508,28 @@ msgstr "Bus session utilisateur"
 msgctxt "dbus"
 msgid "System & User Session Bus"
 msgstr "Bus système et Bus session utilisateur"
+
+#. Message answer
+#: src/widget/unit_control_panel/side_control_panel/imp.rs:130
+msgctxt "thaw"
+msgid "Thaw"
+msgstr "Décongeler"
+
+#. Message answer
+#: src/widget/unit_control_panel/side_control_panel/imp.rs:156
+msgctxt "reload"
+msgid "Reload"
+msgstr "Recharger"
+
+#, fuzzy
+#~ msgctxt "enable"
+#~ msgid "Enable Unit File"
+#~ msgstr "Activer un fichier d'unité"
+
+#, rust-format
+#~ msgctxt "analyse blame"
+#~ msgid "{} seconds"
+#~ msgstr "{} seconds"
 
 #~ msgctxt "control"
 #~ msgid "Unmask"
