--- a/po/fr.po
+++ b/po/fr.po
@@ -783,7 +783,6 @@ msgstr ""
 msgctxt "control"
 msgid "_Reenable ➚"
 msgstr "_Réactivé"
-msgstr "_Réactivé"
 
 #. tooltip
 #: data/interfaces/side_control_panel.ui:186
@@ -801,7 +800,6 @@ msgstr ""
 #: data/interfaces/side_control_panel.ui:200
 msgctxt "control"
 msgid "_Link ➚"
-msgstr "_Lier ➚"
 msgstr "_Lier ➚"
 
 #. tooltip
@@ -1382,12 +1380,10 @@ msgstr "Unix usec"
 msgctxt "pref time style"
 msgid "Day YYYY-MM-DD HH:MM:SS TZ"
 msgstr "Jour YYYY-MM-DD HH:MM:SS TZ"
-msgstr "Jour YYYY-MM-DD HH:MM:SS TZ"
 
 #: src/utils/time_handling.rs:59
 msgctxt "pref time style"
 msgid "Day YYYY-MM-DD HH:MM:SS.000000 TZ"
-msgstr "Jour YYYY-MM-DD HH:MM:SS.000000 TZ"
 msgstr "Jour YYYY-MM-DD HH:MM:SS.000000 TZ"
 
 #. time style option tooltip
@@ -1395,12 +1391,10 @@ msgstr "Jour YYYY-MM-DD HH:MM:SS.000000 TZ"
 msgctxt "pref time style"
 msgid "Day YYYY-MM-DD HH:MM:SS UTC"
 msgstr "Jour YYYY-MM-DD HH:MM:SS UTC"
-msgstr "Jour YYYY-MM-DD HH:MM:SS UTC"
 
 #: src/utils/time_handling.rs:67
 msgctxt "pref time style"
 msgid "Day YYYY-MM-DD HH:MM:SS.000000 UTC"
-msgstr "Jour YYYY-MM-DD HH:MM:SS.000000 UTC"
 msgstr "Jour YYYY-MM-DD HH:MM:SS.000000 UTC"
 
 #. time style option tooltip
@@ -1408,12 +1402,10 @@ msgstr "Jour YYYY-MM-DD HH:MM:SS.000000 UTC"
 msgctxt "pref time style"
 msgid "Seconds since the epoch"
 msgstr "Secondes depuis l'Époque"
-msgstr "Secondes depuis l'Époque"
 
 #: src/utils/time_handling.rs:75
 msgctxt "pref time style"
 msgid "Micro seconds since the epoch"
-msgstr "Micro secondes depuis l'Époque"
 msgstr "Micro secondes depuis l'Époque"
 
 #. about dialogue
@@ -1426,13 +1418,11 @@ msgstr "Merci pour votre soutien"
 msgctxt "clean"
 msgid "No Unit Selected"
 msgstr "Pas d'unité sélectionnée"
-msgstr "Pas d'unité sélectionnée"
 
 #. Dialog title
 #: src/widget/control_action_dialog/mod.rs:62
 msgctxt "action unit file"
 msgid "Enable Unit File"
-msgstr "Activer le fichier d'unité"
 msgstr "Activer le fichier d'unité"
 
 #. Dialog title
@@ -1467,7 +1457,6 @@ msgstr "Désactiver le fichier d'unité"
 msgctxt "action unit file"
 msgid "Link Unit File"
 msgstr "Lier le fichier d'unité"
-msgstr "Lier le fichier d'unité"
 
 #. preference group title
 #. Button
@@ -1484,7 +1473,6 @@ msgstr "Activer"
 msgctxt "action unit file"
 msgid "Disable"
 msgstr "Désactiver"
-msgstr "Désactiver"
 
 #. preference group title
 #. Button
@@ -1500,12 +1488,10 @@ msgstr "Masquer"
 msgctxt "action unit file"
 msgid "Start"
 msgstr "Démarrer"
-msgstr "Démarrer"
 
 #: src/widget/control_action_dialog/mod.rs:97
 msgctxt "action unit file"
 msgid "Stop"
-msgstr "Arrêter"
 msgstr "Arrêter"
 
 #. Button
@@ -1519,13 +1505,11 @@ msgstr "Prérégler"
 msgctxt "action unit file"
 msgid "Reenable"
 msgstr "Réactiver"
-msgstr "Réactiver"
 
 #. Button
 #: src/widget/control_action_dialog/mod.rs:154
 msgctxt "action unit file"
 msgid "Link"
-msgstr "Lier"
 msgstr "Lier"
 
 #. after action title
@@ -1575,13 +1559,11 @@ msgstr "Mode d'arrêt"
 msgctxt "action unit file"
 msgid "Stoping mode options"
 msgstr "Options d'arrêt"
-msgstr "Options d'arrêt"
 
 #. Dialog subtitle
 #: src/widget/kill_panel/imp.rs:77
 msgctxt "kill"
 msgid "No Unit Selected"
-msgstr "Pas d'unité sélectionnée"
 msgstr "Pas d'unité sélectionnée"
 
 #: src/widget/kill_panel/imp.rs:154
@@ -1637,7 +1619,6 @@ msgstr "Signal de file d'attente {} avec valeur {} vers"
 #, rust-format
 msgctxt "kill"
 msgid "Kill signal {} to"
-msgstr "Signal Kill {} vers"
 msgstr "Signal Kill {} vers"
 
 #. kill signal description
@@ -2133,24 +2114,17 @@ msgstr "{} a échoué. Raison: <span fgcolor='{}'>{}</span>."
 #, rust-format
 msgctxt "workaround"
 msgid "Unfortunately <b>SysD Manager</b> can't perfom <b>{}</b> action."
-msgstr ""
-"Malheureusement, <b>SysD Manager</b> ne peut pas exécuter l'action <b>{}</b>."
-"Malheureusement, <b>SysD Manager</b> ne peut pas exécuter l'action <b>{}</b>."
+msgstr "Malheureusement, <b>SysD Manager</b> ne peut pas exécuter l'action <b>{}</b>."
 
 #: src/widget/unit_control_panel/mod.rs:143
 msgctxt "workaround"
 msgid "The authorisation can be configured in the following file :"
 msgstr "L'autorisation peut être configurée dans le fichier suivant :"
-msgstr "L'autorisation peut être configurée dans le fichier suivant :"
 
 #: src/widget/unit_control_panel/mod.rs:163
 msgctxt "workaround"
 msgid "Otherwise, you can try the bellow command line in your terminal"
-msgstr ""
-"Sinon, vous pouvez essayer la ligne de commande ci-dessous dans votre "
-"terminal"
-"Sinon, vous pouvez essayer la ligne de commande ci-dessous dans votre "
-"terminal"
+msgstr "Sinon, vous pouvez essayer la ligne de commande ci-dessous dans votre terminal"
 
 #. workaround dialog title
 #: src/widget/unit_control_panel/mod.rs:185
@@ -2158,13 +2132,11 @@ msgstr ""
 msgctxt "workaround"
 msgid "Fail! {}"
 msgstr "Échec! {}"
-msgstr "Échec! {}"
 
 #. action name
 #: src/widget/unit_control_panel/side_control_panel/imp.rs:114
 msgctxt "action"
 msgid "Freeze"
-msgstr "Geler"
 msgstr "Geler"
 
 #. action name
@@ -2190,20 +2162,17 @@ msgstr "Démasquer"
 msgctxt "dependency"
 msgid "Unit Types"
 msgstr "Types d'unité"
-msgstr "Types d'unité"
 
 #. tooltip on filter
 #: src/widget/unit_dependencies_panel/imp.rs:360
 msgctxt "dependency"
 msgid "Filter dependencies by types"
 msgstr "Filtrer les dépendances par types"
-msgstr "Filtrer les dépendances par types"
 
 #. flatpak permision error dialog title
 #: src/widget/unit_file_panel/flatpak.rs:43
 msgctxt "unit file"
 msgid "Flatpak permission needed!"
-msgstr "Permission Flatpak nécessaire!"
 msgstr "Permission Flatpak nécessaire!"
 
 #. flatpak permision error dialog line 1
@@ -2251,7 +2220,6 @@ msgstr ""
 #, rust-format
 msgctxt "unit file"
 msgid "<b>Option 3:</b> In your terminal, run the command: <u>{}</u>"
-msgstr "<b>Option 3:</b> Dans votre terminal, exécutez la commande: <u>{}</u>"
 msgstr "<b>Option 3:</b> Dans votre terminal, exécutez la commande: <u>{}</u>"
 
 #~ msgctxt "kill default action"
